Fixed bug in message sortin/limiting in server side. Added a stupid bot telling Shakespeare quotes. Fixed (w/ an ugly hack) a scroll bug on Safari.

--- a/static/style.css
+++ b/static/style.css
@@ -30,8 +30,40 @@ body {
 .panel-body.pbody {
   padding: 0; }
 .panel-body .msg-container {
-  overflow-y: scroll;
-  max-height: 100%; }
+  max-height: 100%;
+  overflow-y: scroll; }
+.panel-body #messages {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+  .panel-body #messages li {
+    animation: fadein 0.3s;
+    margin: 10px 0;
+    padding-bottom: 10px;
+    border-bottom: 1px dotted #B3A9A9; }
+@keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+    .panel-body #messages li .chat-img {
+      margin: 10px 0; }
+      .panel-body #messages li .chat-img img {
+        border-radius: 10px;
+        width: 60px; }
+    .panel-body #messages li .msg-content {
+      margin-left: 70px; }
+      .panel-body #messages li .msg-content .username {
+        font-size: 1.2em;
+        margin-top: 0.5em;
+        margin-bottom: 0.5em; }
+        .panel-body #messages li .msg-content .username:hover {
+          cursor: pointer; }
+      .panel-body #messages li .msg-content p {
+        margin-right: 80px;
+        text-align: justify; }
+      .panel-body #messages li .msg-content .msg-time {
+        color: #aaaaaa; }
 .panel-body .rooms {
   padding: 0;
   border-right: 1px solid #ccc;
@@ -83,38 +115,5 @@ body {
     top: 20px;
     right: 25px;
     font-size: 1.5em; }
-
-#messages {
-  list-style-type: none;
-  margin: 0;
-  padding: 0; }
-  #messages li {
-    animation: fadein 0.3s;
-    margin: 10px 0;
-    padding-bottom: 10px;
-    border-bottom: 1px dotted #B3A9A9; }
-@keyframes fadein {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-    #messages li .chat-img {
-      margin: 10px 0; }
-      #messages li .chat-img img {
-        border-radius: 10px;
-        width: 60px; }
-    #messages li .msg-content {
-      margin-left: 70px; }
-      #messages li .msg-content .username {
-        font-size: 1.2em;
-        margin-top: 0.5em;
-        margin-bottom: 0.5em; }
-        #messages li .msg-content .username:hover {
-          cursor: pointer; }
-      #messages li .msg-content p {
-        margin-right: 80px;
-        text-align: justify; }
-      #messages li .msg-content .msg-time {
-        color: #aaaaaa; }
 
 /*# sourceMappingURL=style.css.map */
